@@ -1,3 +1,8 @@
+2010-05-21  Michal Ludvig  <mludvig@logix.net.nz>
+
+	* s3cmd, S3/S3.py, S3/Config.py: Added --reduced-redundancy
+	  switch for Reduced Redundancy Storage.
+
 2010-05-20  Michal Ludvig  <mludvig@logix.net.nz>
 
 	* s3cmd, S3/ACL.py, S3/Config.py: Support for --acl-grant
